--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>My site</title>
 </head>
 <body>
-    <h1>Hello I am Belaid this is my Github website page!!</h1>
+    <h1>Hello I am Belaid this is my Github website page!!</h1></body>
+    <h2>This is my first change</h2>
 </body>
 </html>
